[project]
name = "exasol-bucketfs"
version = "2.2.0"
requires-python = ">=3.10,<3.14"
description = "BucketFS utilities for the Python programming language"
authors = [
    {name="Torsten Kilias", email="torsten.kilias@exasol.com"},
    {name="Nicola Coretti", email="nicola.coretti@exasol.com"},
    {name="Anastasiia Sergienko", email="anastasiia.sergienko@exasol.com"},
]
readme = 'README.rst'
license = "MIT"
keywords = ['exasol', 'bucketfs']
dependencies = [
    "requests>=2.33.1",
    "exasol-saas-api>=2.10.0,<3.0",
]

[project.urls]
repository = "https://github.com/exasol/bucketfs-python"
homepage = "https://github.com/exasol/bucketfs-python"

[build-system]
requires = [
    "poetry-core>=2.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.3.0"
packages  = [
    {include = "exasol"},
]

[dependency-groups]
dev = [
    "pyexasol>=1.0, <3.0",
    "dill>=0.4.1",
    "exasol-udf-mock-python>=0.2.0",
    "toml>=0.10.2",
    "sphinx-copybutton>=0.5.0",
    "exasol-toolbox>=7.0.0, <8",
    "pytest-localserver>=0.10.0",
    "pytest-exasol-backend>=1.0.0, <2",
]

[tool.coverage.run]
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 75


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 7.3
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff.lint]
extend-ignore = [
    "E",      # Syntax errors
    "F",      # Pyflakes rules (excluding F401)
    "UP",     # pyupgrade rules
    "D",      # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.sonar]
projectKey = "com.exasol:bucketfs-python"
host.url = "https://sonarcloud.io"
organization = "exasol"
